--- a/css/SimpleContactForm.css
+++ b/css/SimpleContactForm.css
@@ -5,20 +5,26 @@ input[type=submit],
 textarea{
 	width:67%;
 	min-width:100px;
-	padding:5px 3px 3px 3px;
-	
-	/*background:#d9f3f9 url('images/input-shadow.jpg') top left no-repeat;*/
-	
+	padding:5px 3px 3px 3px;	
 	background-color:#d9f3f9;
-	
 	border:1px solid #0054a4;
 	
-		/* border radius */
-		/* Firefox */
-		-moz-border-radius: 3px; 
-		/* WebKit */
-		-webkit-border-radius: 3px; 
-		/* IE9+, Opera 10.5+, current releases of Google Chrome & etc */
-		border-radius:3px;
-	
+	/* border radius */
+	/* Firefox */
+	-moz-border-radius: 3px; 
+	/* WebKit */
+	-webkit-border-radius: 3px; 
+	/* IE9+, Opera 10.5+, current releases of Google Chrome & etc */
+	border-radius:3px;
+}
+
+.errorMessage{
+	position:absolute;
+	margin-top:-2em;
+	padding:3px;
+	border-radius:3px;
+	border:1px solid red;
+	color:#fff;
+	background-color:#d2322d;
+	border-color:#ac2925
 }
